flex/flex-tests/testData/js2_highlighting/ImportBeforePackage.js2
import mypackage.*;

<error descr="Package should be first statement in file">package</error> {
  class ImportBeforePackage {
    var x:Object = new ImportBeforePackage();
  }
}